<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/ProfileTitle"
        android:layout_width="395dp"
        android:layout_height="78dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:text="WELC      ME"
        android:textColor="#005e63"
        android:textSize="55sp"
        android:textStyle="italic" />

    <ImageView
        android:id="@+id/RunLogo"
        android:layout_width="186dp"
        android:layout_height="169dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="138dp"
        android:layout_marginTop="-5dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/Run_button"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_bg_round"
        android:padding="15dp"
        android:text="@string/run"
        android:textColor="#005e63"
        android:textSize="50sp" />

    <Button
        android:id="@+id/History_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="450dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_bg_round"
        android:padding="15dp"
        android:text="@string/history"
        android:textColor="#005e63"
        android:textSize="15sp" />

    <Button
        android:id="@+id/Profile_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="450dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_bg_round"
        android:padding="15dp"
        android:text="@string/profile"
        android:textColor="#005e63"
        android:textSize="15sp" />

</RelativeLayout>